@@ -28,21 +28,21 @@ import org.hyperledger.besu.consensus.qbft.core.messagewrappers.Prepare;
 import org.hyperledger.besu.consensus.qbft.core.messagewrappers.Proposal;
 import org.hyperledger.besu.consensus.qbft.core.payload.MessageFactory;
 import org.hyperledger.besu.consensus.qbft.core.payload.PreparePayload;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftBlock;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftBlockCodec;
 import org.hyperledger.besu.consensus.qbft.core.validation.MessageValidator;
 import org.hyperledger.besu.crypto.SignatureAlgorithm;
 import org.hyperledger.besu.crypto.SignatureAlgorithmFactory;
 import org.hyperledger.besu.cryptoservices.NodeKey;
 import org.hyperledger.besu.cryptoservices.NodeKeyUtils;
-import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
-import org.hyperledger.besu.ethereum.core.Block;
-import org.hyperledger.besu.ethereum.core.Util;
 
 import java.math.BigInteger;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
@@ -59,24 +59,19 @@ public class RoundStateTest {
   private static final Supplier<SignatureAlgorithm> SIGNATURE_ALGORITHM =
       Suppliers.memoize(SignatureAlgorithmFactory::getInstance);
 
-  private final List<NodeKey> validatorKeys = Lists.newArrayList();
   private final List<MessageFactory> validatorMessageFactories = Lists.newArrayList();
   private final ConsensusRoundIdentifier roundIdentifier = new ConsensusRoundIdentifier(1, 1);
-
-  private final List<Address> validators = Lists.newArrayList();
   private final Hash blockHash = Hash.fromHexStringLenient("1");
 
   @Mock private MessageValidator messageValidator;
-
-  @Mock private Block block;
+  @Mock private QbftBlock block;
+  @Mock private QbftBlockCodec blockEncoder;
 
   @BeforeEach
   public void setup() {
     for (int i = 0; i < 3; i++) {
       final NodeKey newNodeKey = NodeKeyUtils.generate();
-      validatorKeys.add(newNodeKey);
-      validators.add(Util.publicKeyToAddress(newNodeKey.getPublicKey()));
-      validatorMessageFactories.add(new MessageFactory(newNodeKey));
+      validatorMessageFactories.add(new MessageFactory(newNodeKey, blockEncoder));
     }
   }
 
@@ -96,7 +91,7 @@ public class RoundStateTest {
 
     final Proposal proposal =
         validatorMessageFactories
-            .get(0)
+            .getFirst()
             .createProposal(
                 roundIdentifier, block, Collections.emptyList(), Collections.emptyList());
 
@@ -115,7 +110,7 @@ public class RoundStateTest {
 
     final Proposal proposal =
         validatorMessageFactories
-            .get(0)
+            .getFirst()
             .createProposal(
                 roundIdentifier, block, Collections.emptyList(), Collections.emptyList());
 
@@ -125,7 +120,7 @@ public class RoundStateTest {
 
     final Commit commit =
         validatorMessageFactories
-            .get(0)
+            .getFirst()
             .createCommit(
                 roundIdentifier,
                 blockHash,
@@ -172,7 +167,7 @@ public class RoundStateTest {
 
     final Proposal proposal =
         validatorMessageFactories
-            .get(0)
+            .getFirst()
             .createProposal(
                 roundIdentifier, block, Collections.emptyList(), Collections.emptyList());
     assertThat(roundState.setProposedBlock(proposal)).isTrue();
@@ -203,7 +198,7 @@ public class RoundStateTest {
 
     final Proposal proposal =
         validatorMessageFactories
-            .get(0)
+            .getFirst()
             .createProposal(
                 roundIdentifier, block, Collections.emptyList(), Collections.emptyList());
 
@@ -330,7 +325,7 @@ public class RoundStateTest {
     assertThat(preparedCertificate.get().getBlock()).isEqualTo(block);
 
     final List<SignedData<PreparePayload>> expectedPrepares =
-        List.of(firstPrepare, secondPrepare).stream()
+        Stream.of(firstPrepare, secondPrepare)
             .map(BftMessage::getSignedPayload)
             .collect(Collectors.toList());
     assertThat(preparedCertificate.get().getPrepares()).isEqualTo(expectedPrepares);
